fix: css for popups on mobile

--- a/src/blocks/form/__btn-save/form__btn-save.css
+++ b/src/blocks/form/__btn-save/form__btn-save.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 358px;
+  /* width: 358px; */
   height: 50px;
   background-color: #000;
   border: 0 solid #000;
@@ -20,7 +20,7 @@
 
 @media screen and (max-width: 620px) {
   .form__btn-save {
-    width: 260px;
+    /* width: 260px; */
     height: 40px;
     font-size: 14px;
     line-height: 17px;
