--- a/src/blocks/form/__text-input/form__text-input.css
+++ b/src/blocks/form/__text-input/form__text-input.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0 0 30px;
   padding: 0;
-  width: 358px;
+  /* width: 358px; */
   height: 27px;
   border: 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
@@ -21,7 +21,7 @@
 
 @media screen and (max-width: 620px) {
   .form__text-input {
-    width: 260px;
+    /* width: 260px; */
     height: 24px;
     margin: 0 0 20px;
     font-size: 12px;
