--- a/src/blocks/popup/__btn-close/popup__btn-close.css
+++ b/src/blocks/popup/__btn-close/popup__btn-close.css
@@ -9,9 +9,6 @@
   right: -44px;
   border: 0;
   background-color: transparent;
-  /* display: flex;
-  justify-content: center;
-  align-items: center; */
   transform: rotate(45deg);
   transition: transform 0.5s ease;
 
@@ -32,7 +29,7 @@
     width: 42px;
     height: 42px;
     top: -75px;
-    left: 130px;
+    left: 119px;
     background-size: 30px;
   }
 }
