--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -6,10 +6,12 @@
   border-radius: 10px;
   background-color: #fff;
   position: relative;
+  width: 430px;
 }
 
 @media screen and (max-width: 620px) {
   .popup__container {
     padding: 30px 20px;
+    width: 280px;
   }
 }
