--- a/src/blocks/popup/__message/popup__message.css
+++ b/src/blocks/popup/__message/popup__message.css
@@ -2,10 +2,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  width: 358px;
+  /* width: 358px; */
   text-align: center;
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
   color: #000;
+}
+
+@media screen and (max-width: 620px) {
+  .popup__message {
+    /* max-width: 244px; */
+    font-size: 20px;
+    line-height: 24px;
+  }
 }
